--- a/students/deepa/html/deepa.html
+++ b/students/deepa/html/deepa.html
@@ -83,6 +83,30 @@ footer {
       <li><a href="https://en.wikipedia.org/wiki/Pokhara">Pokhara</a></li>
       <li><a href="https://en.wikipedia.org/wiki/Chitwan_District">Chitwan</a></li>
     </ul>
+    
+    <ol>
+      <li><a href="https://en.wikipedia.org/wiki/Kathmandu">Dharan</a></li>
+      <li><a href="https://en.wikipedia.org/wiki/Pokhara">Dhankuta</a></li>
+      <li><a href="https://en.wikipedia.org/wiki/Chitwan_District">Dhangadi</a></li>
+    </ol>
+    
+    <table  border="">
+  <tr>
+    <th>Company</th>
+    <th>Contact</th>
+    <th>Place</th>
+  </tr>
+  <tr>
+    <td>Ncell</td>
+    <td>info@ncell.com</td>
+    <td>Kathmandu</td>
+  </tr>
+  <tr>
+    <td>New Hope Agro</td>
+    <td>info@newhope.com</td>
+    <td>Chitwan</td>
+  </tr>
+</table>
   </nav>
   
   <article>
