--- a/students/Manoj Adhikari/loginFunctionality.html
+++ b/students/Manoj Adhikari/loginFunctionality.html
@@ -86,6 +86,11 @@ span.psw {
     <label>
       <input type="checkbox" checked="checked" name="remember"> Remember me
     </label>
+
+    <marquee width="60%" direction="left" height="100px">
+      If you forget password,contact NOUREEN .
+      </marquee>
+
   </div>
 
   <div class="container" style="background-color:#f1f1f1">
