--- a/students/Manoj Adhikari/loginFunctionality.html
+++ b/students/Manoj Adhikari/loginFunctionality.html
@@ -119,7 +119,7 @@ input[type=text], input[type=password] {
 }
 
 button {
-  background-color: #04AA6D;
+  background-color: #139d6b;
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
@@ -135,7 +135,7 @@ button:hover {
 .cancelbtn {
   width: auto;
   padding: 10px 18px;
-  background-color: #f44336;
+  background-color: #5c1e19;
 }
 
 .imgcontainer {
